<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.editor.EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/id_nama"
            android:hint="@string/s_nama"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_deskripsi"
            android:layout_below="@+id/id_nama"
            android:hint="@string/s_deskripsi"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top|start"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_tanggal_mulai"
            android:layout_below="@+id/id_deskripsi"
            android:hint="@string/s_tanggal_mulai"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_tanggal_akhir"
            android:layout_below="@+id/id_tanggal_mulai"
            android:hint="@string/s_tanggal_akhir"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_jumlah_sprint"
            android:layout_below="@+id/id_tanggal_akhir"
            android:hint="@string/s_jumlah_sprint"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_budget"
            android:layout_below="@+id/id_jumlah_sprint"
            android:hint="@string/s_budget"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_status"
            android:layout_below="@+id/id_budget"
            android:hint="@string/s_status"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_persen"
            android:layout_below="@+id/id_status"
            android:hint="@string/s_persen"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_semester_id"
            android:layout_below="@+id/id_persen"
            android:hint="@string/s_semester_id"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_scrummaster_id"
            android:layout_below="@+id/id_semester_id"
            android:hint="@string/s_scrummaster_id"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_tim_id"
            android:layout_below="@+id/id_scrummaster_id"
            android:hint="@string/s_tim_id"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/id_created_by"
            android:layout_below="@+id/id_tim_id"
            android:hint="@string/s_created_by"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

<!--        <com.thebluealliance.spectrum.SpectrumPalette-->
<!--            android:id="@+id/palette"-->
<!--            android:layout_below="@id/id_created_by"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:spectrum_colors="@array/demo_colors" />-->

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>